wip json doc gen